Corrige le bug dans MathUtils

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,4 +21,34 @@ jobs:
           dotnet restore dotnet-app.Tests/ProjectFile-Tests.csproj
 
       - name: Run .NET tests
-        run: dotnet test dotnet-app.Tests/ProjectFile-Tests.csproj --logger "console;verbosity=detailed"
+        run: |
+          dotnet test dotnet-app.Tests/ProjectFile-Tests.csproj --logger "console;verbosity=detailed" --logger "trx;LogFileName=TestResults.trx"
+
+      - name: Upload .NET Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: dotnet-test-report
+          path: dotnet-app.Tests/TestResults/TestResults.trx
+
+  test-python:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Run Python Tests and Generate XML Report
+        run: |
+          cd python-app
+          pip install unittest-xml-reporting
+          mkdir -p test-reports
+          python test_math_utils.py
+
+      - name: Upload Python Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-test-report
+          path: python-app/test-reports
